Made changes to get up to date